attempt to fix wrapping

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -15,6 +15,18 @@ $colors: (
     background: #EDF5E1;
 }
 
+.alert-radio-label.sc-ion-alert-md {
+    padding-left: 52px;
+    padding-right: 26px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    flex: 1;
+    color: var(--ion-color-step-850, #262626);
+    font-size: 14px;
+    text-overflow: ellipsis;
+    white-space: pre-line;
+  }
+
 // :root {
 //     --ion-color-numbers: #69bb7b;
 //     --ion-color-numbers-rgb: 105,187,123;
